--- a/index.html
+++ b/index.html
@@ -4,8 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeSprite</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container d-flex flex-column justify-content-center">
+        <h1 class="text-center mt-5">Waltz apps 4: pokemon spriter</h1>
+
+        <h2 id="poketitle" class="mt-5 mb-3 text-center">#25 pikachu</h2>
+        <img class="m-auto mb-3" id="pokeimg" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" 
+        alt="Placeholder image" width="384" height="384">
+
+        <div class="nav-buttons m-auto">
+            <button title="-first" id="firstButton"><i class="fa-solid fa-backward-step"></i></button>
+            <button title="-100" id="backButton100"><-100</button>
+            <button title="-10" id="backButton10"><-10</button>
+            <button title="-1" id="backButton1"><</button>
+            <button title="random" id="randomButton"><i class="fa-solid fa-shuffle"></i></button>
+            <button title="+1" id="nextButton1">></button>
+            <button title="+10" id="nextButton10">+10></button>
+            <button title="+100" id="nextButton100">+100></button>
+            <button title="last" id="lastButton"><i class="fa-solid fa-forward-step"></i></button>
+        </div>
+    </div>
+    <script>
+        let currentPokemonId = 25; // Empezamos con Pikachu (ID 25)
+
+        // Función para obtener un número de Pokémon aleatorio
+        function getRandomPokemon() {
+            return Math.floor(Math.random() * 1010) + 1; // Hay alrededor de 1010 Pokémon actualmente
+        }
+
+        // Función para actualizar el Pokémon
+        async function updatePokemon(pokemonId) {
+            console.log("updatePokemon: ", pokemonId)
+            const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${pokemonId}`);
+            const data = await response.json();
+
+            // Actualiza la imagen del Pokémon
+            const pokeImg = document.getElementById("pokeimg");
+            pokeImg.src = data.sprites.front_default; // Imagen del Pokémon
+            pokeImg.alt = data.name; // Actualiza el alt con el nombre del Pokémon
+
+            // Actualiza el título con el número y el nombre del Pokémon
+            const pokeTitle = document.getElementById("poketitle");
+            pokeTitle.textContent = `#${data.id} ${data.name.charAt(0).toUpperCase() + data.name.slice(1)}`;
+
+            // Actualizamos el ID actual
+            currentPokemonId = data.id;
+        }
+
+        // Función para actualizar al siguiente Pokémon
+        function getNextPokemon(amount) {
+            let nextId = currentPokemonId + amount
+            if (nextId > 1010) {
+                nextId = 1010;
+            }
+            else if (nextId < 1){
+                nextId = 1;
+            }
+            console.log(nextId)
+            updatePokemon(nextId)
+        }
+        
+        // Evento para el botón "random"
+        const randomButton = document.getElementById("randomButton");
+        randomButton.addEventListener("click", () => {
+            const randomId = getRandomPokemon();
+            updatePokemon(randomId);
+        });
+        // Evento para el botón "first"
+        const firstButton = document.getElementById("firstButton");
+        firstButton.addEventListener("click", () => { getNextPokemon(-2000) });
+        // Evento para el botón "next" (+1)
+        const nextButton1 = document.getElementById("nextButton1");
+        nextButton1.addEventListener("click", () => { getNextPokemon(1) });
+        // Evento para el botón "next" (+10)
+        const nextButton10 = document.getElementById("nextButton10");
+        nextButton10.addEventListener("click", () => { getNextPokemon(10) });
+        // Evento para el botón "next" (+100)
+        const nextButton100 = document.getElementById("nextButton100");
+        nextButton100.addEventListener("click", () => { getNextPokemon(100) });
+
+        // Evento para el botón "back" (-1)
+        const backButton1 = document.getElementById("backButton1");
+        backButton1.addEventListener("click", () => { getNextPokemon(-1) });
+        // Evento para el botón "back" (-10)
+        const backButton10 = document.getElementById("backButton10");
+        backButton10.addEventListener("click", () => { getNextPokemon(-10) });
+        // Evento para el botón "back" (-100)
+        const backButton100 = document.getElementById("backButton100");
+        backButton100.addEventListener("click", () => { getNextPokemon(-100) });
+        // Evento para el botón "last"
+        const lastButton = document.getElementById("lastButton");
+        lastButton.addEventListener("click", () => { getNextPokemon(2000) });
+
+        // Cargar el Pokémon inicial (Pikachu)
+        window.onload = () => {
+            updatePokemon(currentPokemonId);
+        };
+    </script>
 </body>
+
 </html>
