--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeSprite</title>
+    <meta property="og:image" 
+    content="htps://ratw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/835.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
@@ -21,7 +23,7 @@
         <h1 class="text-center mt-5">Waltz apps 4: pokemon spriter</h1>
 
         <h2 id="poketitle" class="mt-5 mb-3 text-center">#25 pikachu</h2>
-        <img class="m-auto mb-3" id="pokeimg" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" 
+        <img class="m-auto mb-3" id="pokeimg" src="htps://ratw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" 
         alt="Placeholder image" width="384" height="384">
 
         <div class="nav-buttons m-auto">
