--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeSprite</title>
     <meta property="og:image" 
-    content="htps://ratw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/835.png" />
+    content="https://ratw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/835.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
